TD-Jour6/policies/kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: critical
    policies.kyverno.io/description: >-
      Les conteneurs privileged ont acces a toutes les ressources du host
      et representent un risque de securite majeur.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - cloudshop-prod
      validate:
        message: "Les conteneurs privilegies sont interdits."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
